# dxcore

./: .clang-format  .gitignore  CMakeLists.backup  CMakeLists.txt  CMakePresets.json  Cargo.toml  Doxyfile  README.md  build-requirements.txt  build.rs  conandata.yml  conanfile.py  conanfile.txt  pyproject.toml
.github/workflows/: build-publish.yml
bindings/python/: CMakeLists.txt  market.cpp  order_book.cpp
docs/: custom.css
docs/sphinx/source/: conf.py  index.rst
dxcore/: __init__.py  market.pyi
matching-engine/: CMakeLists.txt  design.md
matching-engine/src/: instrument.h  order.cpp  order.h  price_level.cpp  price_level.h
src/: CMakeLists.txt  _main.rs  bindings.cpp  dxcore.h  main.rs  wrapper.h
src/core/: CMakeLists.txt  instrument.h  order.cpp  order.h  order_book.cpp  order_book.h  price_level.cpp  price_level.h  transaction.h
src/core/orders/: order_book.h
src/core/utils/: generator.h  skip_list.h  skip_list.py  skip_list.tpp  tp_queue.h  tp_queue.tpp
src/feed/: client.py  exchange.cpp  processor.cpp
src/fpga/: README.md
src/lib/: mvo.cpp  mvo.h  portfolio_optimization.cpp  portfolio_optimization.h
test/: test_lob.cpp  test_portfolio_optimization.cpp  test_price_level.cpp  test_utils.cpp
tests/: CMakeLists.txt  test_order.cpp  test_order_book.cpp
