[package]
name = "dxcore"
version = "0.0.1"
edition = "2021"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libc = "0.2"
utoipa = "5"
utoipa-swagger-ui = { version = "8", features = ["actix-web"] }

[build-dependencies]
cc = "1.0"
bindgen = "0.70.1"

[target]