[build-system]
requires = ["scikit-build-core", "cmake", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "dxcore"
version = "0.1.0"
description = "Core library for the Divergex ecosystem."
authors = [{name="Rafael Zimmer"}]
requires-python = ">=3.10"

[tool.scikit-build]
cmake.define = { "CMAKE_PROJECT_TOP_LEVEL_INCLUDES" = "conan_provider.cmake" }
cmake.build-type = "Release"
sdist.exclude = ["cmake-build-debug/*"]