[build-system]
requires = ["scikit-build-core", "pybind11", "conan"]
build-backend = "scikit_build_core.build"

[project]
name = "dxcore"
version = "0.1.0"
description = "Core library for the Divergex ecosystem."
readme = "README.md"
readme-content-type = "text/markdown"
authors = [{name="Rafael Zimmer"}]
requires-python = ">=3.10"

[project.readme]
content-type = "text/markdown"
file = "README.md"

[tool.scikit-build.cmake]
args = [
    "-G", "Ninja",
    "-DCMAKE_BUILD_TYPE=Debug"
]
version = ">=3.25"

[tool.scikit-build.cmake.define]
BUILD_PYTHON_BINDINGS = "ON"
Python_EXECUTABLE = "python"
Python3_EXECUTABLE = "python"

[tool.scikit-build]
wheel.packages = ["dxcore"]