[build-system]
requires = [
    "scikit-build-core>=0.10",
    "pybind11",
    "conan",
]
build-backend = "scikit_build_core.build"

[project]
name = "dxcore"
version = "0.1.0"
description = "Core library for the Divergex ecosystem."
authors = [{ name = "Rafael Zimmer" }]
requires-python = ">=3.10"

[project.readme]
content-type = "text/markdown"
file = "README.md"

[tool.scikit-build.cmake]
args = [
    "-G", "Ninja",
    "-DCMAKE_BUILD_TYPE=Release"
]
version = ">=3.25"

[tool.scikit-build.cmake.define]
BUILD_PYTHON_BINDINGS = "ON"
Python_EXECUTABLE = "python"
Python3_EXECUTABLE = "python"


#[tool.cibuildwheel]
#build = ["cp310-manylinux_x86_64", "cp311-manylinux_x86_64", "cp312-manylinux_x86_64"]
#before-all = "yum install -y ninja-build conan && conan profile detect --force"
#test-command = "python -c 'import dxcore'"
